# indicatorenplan-limburg

./: .gitignore  README.md  pyproject.toml
indicatorenplan_limburg/configs/: indicators.yaml  paths.py  settings.py  style.py
indicatorenplan_limburg/data/: load.py
indicatorenplan_limburg/indicatoren/: base_indicator.py  registry.py
indicatorenplan_limburg/indicatoren/economie/: mo7i.py
indicatorenplan_limburg/indicatoren/leefbare_steden_en_dorpen/: mo_11a.py
indicatorenplan_limburg/indicatoren/toekomstbestendige_economie/: d_21a.py  mo_7i.py
indicatorenplan_limburg/metadata/: metadata.py
indicatorenplan_limburg/processing/: comparison.py  load.py  summary.py
indicatorenplan_limburg/system/: registry.py  runner.py
notebooks/: 000_data_summary.ipynb  001_indicator_runner.ipynb
tests/test_configs/: test_load.py  test_settings.py
tests/test_data/: test_load.py
tests/test_indicatoren/economie/: test_mo7i.py
tests/test_indicatoren/test_economie/: test_mo7i.py
tests/test_indicatoren/test_toekomstbestendige_economie/: test_mo_7i.py
tests/test_processing/: test_comparison.py  test_load.py  test_summary.py
